# netbox-fabric

./: README.md  pyproject.toml
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: ci.yml
netbox_fabric/: __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_fabric/api/: serializers.py  urls.py  views.py
netbox_fabric/migrations/: 0001_initial.py
netbox_fabric/templates/netbox_fabric/: fabric.html
netbox_fabric/tests/: test_models.py
