[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-fabric"
version = "0.1.0"
requires-python = ">=3.12"
description = "Model switching fabrics by region in NetBox"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["netbox_fabric*"]

[tool.setuptools.package-data]
netbox_fabric = [
    "templates/**",
    "static/**",
    "locale/**/*.mo",
]
